--- a/Final Project/Properties/Resources.resx
+++ b/Final Project/Properties/Resources.resx
@@ -118,8 +118,44 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="selamat datang" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Group 3 (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Background_Shape" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Background Shape.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pngwing.com" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pngwing.com.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnPembayaran" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnPembayaran.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Group 1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hugeicons_lock" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hugeicons_lock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="raicabwsb2024-67c1a41c-ebd2-4aa7-86e2-a5a9e48ef198" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\raicabwsb2024-67c1a41c-ebd2-4aa7-86e2-a5a9e48ef198.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="navbar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\navbar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Email Icon Container1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Email Icon Container1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="el_ok-circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\el_ok-circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Continue Button Container" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Continue Button Container.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="sepatu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Group 1 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnTambahBayar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnTambahBayar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="String" xml:space="preserve">
     <value>blob:https://web.whatsapp.com/93626a5e-1208-4659-a5cd-ecaabf6e9a6f</value>
@@ -127,34 +163,13 @@
   <data name="Main_Screen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Main Screen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="raicabwsb2024-67c1a41c-ebd2-4aa7-86e2-a5a9e48ef198" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\raicabwsb2024-67c1a41c-ebd2-4aa7-86e2-a5a9e48ef198.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="sepatu" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Group 1 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Background_Shape" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Background Shape.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Email Icon Container1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Email Icon Container1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Continue Button Container" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Continue Button Container.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="selamat datang" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Group 3 (2).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="login" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Group 1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnBeranda" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnBeranda.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Email Icon Container" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Email Icon Container.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hugeicons_lock" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\hugeicons_lock.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="el_ok-circle" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\el_ok-circle.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnLogOut" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnLogOut.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
